--- a/Vibr8.html
+++ b/Vibr8.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="Sunbeds.html">SunBeds</a>
+              <a class="nav-link text-uppercase text-expanded" href="SunBeds.html">SunBeds</a>
             </li>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="Vibr8.html">Vibr8</a>
@@ -51,7 +51,7 @@
               <a class="nav-link text-uppercase text-expanded" href="ELE.html">Eyelash Extensions</a>
             </li>
 			<li class="nav-item  px-lg-4">
-             <a class="nav-link text-uppercase text-expanded" href="Products.html">Back</a>
+             <a class="nav-link text-uppercase text-expanded" href="products.html">Back</a>
             </li>
           </ul>
         </div>
