--- a/SunBeds.html
+++ b/SunBeds.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="Sunbeds.html">SunBeds</a>
+              <a class="nav-link text-uppercase text-expanded" href="SunBeds.html">SunBeds</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="Vibr8.html">Vibr8</a>
@@ -51,7 +51,7 @@
               <a class="nav-link text-uppercase text-expanded" href="ELE.html">Eyelash Extensions</a>
             </li>
 			<li class="nav-item  px-lg-4">
-             <a class="nav-link text-uppercase text-expanded" href="Products.html">Back</a>
+             <a class="nav-link text-uppercase text-expanded" href="products.html">Back</a>
             </li>
           </ul>
         </div>
@@ -93,7 +93,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/items.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Items.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">We also have a wide range of products in store avaialble for purchase for all the tanning needs.</p>							
